# Textbook-QA-Assistant

./: .gitignore  ENVIRONMENT_SETUP.md  README.md
backend/: .env.example  CONVERSATIONAL_RAG.md  README.md  pyproject.toml  test_conversational.py  test_conversational_logic.py  test_ingest.py  test_rag_chain.py
backend/app/: __init__.py  __main__.py  auth.py  auth_routes.py  config.py  database.py  embeddings.py  ingest.py  llm.py  main.py  models.py  rag_chain.py  vectorstore.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src/components/: ChatMessage.jsx  ChatPanel.jsx  Header.jsx  ProtectedRoute.jsx  SessionList.jsx  TextbookList.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: App.jsx  Login.jsx  Signup.jsx
