[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textbook-qa-rag"
version = "0.1.0"
description = "Interactive Textbook Q&A RAG System"
readme = "README.md"
requires-python = ">=3.11"

license = { text = "MIT" }

authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

keywords = [
    "rag",
    "langchain",
    "pinecone",
    "fastapi",
    "openai"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.35.0",

    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-community>=0.4.0",

    "langchain-openai>=1.0.0",

    "langchain-huggingface>=0.3.0",
    "sentence-transformers>=5.0.0",

    "langchain-pinecone>=0.2.13",
    "pinecone>=7.3.0",

    "cerebras-cloud-sdk>=1.0.0",

    "pypdf>=5.8.0",

    "python-dotenv>=1.1.1",

    "pydantic>=2.11",

    "httpx>=0.28.1",

    "aiofiles>=24.1.0",
    "python-multipart>=0.0.20",

    "sqlalchemy>=2.0.42",
    "alembic>=1.16.4",

    "argon2-cffi>=25.1.0",
    "PyJWT>=2.10.1",

    "email-validator>=2.3.0",

    "click>=8.2.1",

    "aiosqlite>=0.21.0",
    "aiomysql>=0.3.2",

    "tiktoken>=0.9.0",

    "numpy>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.0.0",
    "black>=25.1.0",
    "ruff>=0.12.0",
    "mypy>=1.17.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/textbook-qa-rag"
Repository = "https://github.com/yourusername/textbook-qa-rag"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W"
]

ignore = [
    "E501"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
strict_equality = true